application/brennoflavio/atuin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: atuin
  template:
    metadata:
      labels:
        io.kompose.service: atuin
    spec:
      containers:
        - args:
            - server
            - start
          image: ghcr.io/atuinsh/atuin:0056c72
          name: atuin
          ports:
            - containerPort: 8888
          resources:
            limits:
              memory: 16Mi
            requests:
              cpu: 10m
              memory: 16Mi
          volumeMounts:
            - mountPath: /config
              name: atuin-claim0
      volumes:
        - name: atuin-claim0
          persistentVolumeClaim:
            claimName: atuin-claim0
