application/brennoflavio/atuin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: atuin
  name: atuin
  namespace: atuin
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  selector:
    io.kompose.service: atuin
