application/brennoflavio/atuin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  namespace: atuin
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
spec:
  ingressClassName: external-nginx
  rules:
  - host: atuin.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atuin
            port:
              number: 80
  tls:
  - hosts:
    - atuin.brennoflavio.com.br
    secretName: atuin-tls
